# ic-wasi-polyfill

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_tests.sh  cobertura.xml  deny.toml  deploy_tests.sh  ic-test.json
.github/workflows/: CI.yml  ci.yml  ic.yml  pr-title.yml  rust.yml
fuzz-tests/: Cargo.toml  a_computed.txt  b_expected.txt
fuzz-tests/src/: lib.rs  test_setup.rs  tests.rs
fuzz-tests/src/bindings/: canister_initial_backend.rs  canister_upgraded_backend.rs  fs_tests_backend.rs  mod.rs
ic-wasi-polyfill/: Cargo.toml
ic-wasi-polyfill/src/: environment.rs  lib.rs  wasi.rs  wasi_helpers.rs  wasi_mock.rs
ic-wasi-polyfill/src/test/: common.rs  fd_filestat_set.rs  fd_readdir.rs  fd_tests.rs  file_read_write_seek_tell.rs  mod.rs
ic-wasi-polyfill/tests/: common.rs  fd_filestat_set.rs  fd_readdir.rs  fd_tests.rs  file_read_write_seek_tell.rs  integration_tests.rs  lib_tests.rs  path_open_tests.rs  path_tests.rs
integration-tests/: Cargo.toml
integration-tests/src/: test_setup.rs  tests.rs
integration-tests/src/bindings/: c_tests_backend.rs  canister_initial_backend.rs  canister_upgraded_backend.rs  fs_tests_backend.rs  mod.rs
integration-tests/src/tests/: fuzz_tests.rs  integration_tests.rs  mod.rs
perf/: perf.repl
scripts/: build_tests.sh  coverage.sh  deploy_tests.sh  download-pocket-ic.sh  install_wasi_sdk.sh  perf.repl
src/: environment.rs  integration_tests.rs  lib.rs  lib_p_test.rs  lib_test.rs  wasi.rs  wasi_helpers.rs  wasi_mock.rs
src/test/: common.rs  fd_filestat_set.rs  fd_readdir.rs  fd_tests.rs  integration_tests.rs  lib_tests.rs  mod.rs  path_open_tests.rs  path_tests.rs
src/tests/: download-wasi2ic.sh  perf.sh
src/tests/benchmark_test/: Cargo.toml  load_chunk_map.sh  read_text.sh
src/tests/benchmark_test/src/benchmark_test_backend/: Cargo.toml  benchmark_test_backend.did
src/tests/benchmark_test/src/benchmark_test_backend/src/: lib.rs
src/tests/benchmark_test_upgraded/: Cargo.toml
src/tests/benchmark_test_upgraded/src/benchmark_test_upgraded_backend/: Cargo.toml
src/tests/benchmark_test_upgraded/src/benchmark_test_upgraded_backend/src/: lib.rs
test/canisters/canister_initial/: clear_chunk.sh  dfx.json  load_chunk.sh  read_chunk.sh  read_text.sh  store_chunk_map.sh
test/canisters/canister_initial/src/canister_initial_backend/: Cargo.toml  benchmark_test_backend.did
test/canisters/canister_initial/src/canister_initial_backend/src/: lib.rs
test/canisters/canister_upgraded/: Cargo.toml  dfx.json
test/canisters/canister_upgraded/src/canister_upgraded_backend/: Cargo.toml
test/canisters/canister_upgraded/src/canister_upgraded_backend/src/: lib.rs
test/canisters/fs_tests/: dfx.json
test/canisters/fs_tests/scripts/: build.sh  install.sh  test_read.sh  upgrade.sh
test/canisters/fs_tests/src/fs_tests_backend/: Cargo.toml  fs_tests_backend.did
test/canisters/fs_tests/src/fs_tests_backend/src/: canister.rs  lib.rs  main.rs  tests.rs
test_canisters/c_tests/: .gitignore  dfx.json
test_canisters/c_tests/src/: c_tests_backend.did  main.cpp  run.sh
test_canisters/canister_initial/: Cargo.toml  dfx.json  new_dir_writable.sh  perf.repl
test_canisters/canister_initial/src/canister_initial_backend/: Cargo.toml  canister_initial_backend.did
test_canisters/canister_initial/src/canister_initial_backend/src/: lib.rs
test_canisters/canister_upgraded/: dfx.json
test_canisters/canister_upgraded/src/canister_upgraded_backend/: Cargo.toml
test_canisters/canister_upgraded/src/canister_upgraded_backend/src/: lib.rs
test_canisters/fs_tests/: README.md  dfx.json
test_canisters/fs_tests/src/fs_tests_backend/: Cargo.toml  fs_tests_backend.did
test_canisters/fs_tests/src/fs_tests_backend/src/: canister.rs
tests/: perf.sh
tests/benchmark_test/: clear_chunk.sh  create_chunk.sh  dfx.json  load_chunk.sh  perf.ic  read_chunk.sh  store_chunk.sh  store_chunk_map.sh
tests/benchmark_test/src/benchmark_test_backend/: Cargo.toml
tests/benchmark_test/src/benchmark_test_backend/src/: lib.rs
tests/benchmark_test_upgraded/: dfx.json
tests/benchmark_test_upgraded/src/benchmark_test_upgraded_backend/: Cargo.toml
tests/canister_initial/: Cargo.toml  create_chunk.sh  load_chunk_map.sh  perf.ic  store_chunk.sh
tests/canister_initial/src/canister_initial_backend/: Cargo.toml
tests/canister_initial/src/canister_initial_backend/src/: lib.rs
tests/canister_upgraded/src/canister_upgraded_backend/: Cargo.toml
tests/canister_upgraded/src/canister_upgraded_backend/src/: lib.rs
tests/fs_tests/: Cargo.toml  dfx.json
tests/fs_tests/src/fs_tests_backend/: Cargo.toml
tests/fs_tests/src/fs_tests_backend/src/: lib.rs
