[workspace]
members = [
    "ic-wasi-polyfill", "integration-tests", "test_canisters/fs_tests/src/fs_tests_backend",
    "test_canisters/canister_initial/src/canister_initial_backend",
    "test_canisters/canister_upgraded/src/canister_upgraded_backend",
]
resolver = "2"


[workspace.dependencies]
# later versions break candid-extract
candid = "=0.10.14"

ic-cdk = "0.18.5"
ic-stable-structures = "0.7.0"
stable-fs = "0.10.0"
anyhow = "1.0.98"
rand = "0.9.2"
pocket-ic = "9.0.2"
ic-wasi-polyfill = { path = "ic-wasi-polyfill" }

