[workspace]
members = [
    "ic-wasi-polyfill", "integration-tests", "test_canisters/fs_tests/src/fs_tests_backend",
    "test_canisters/canister_initial/src/canister_initial_backend",
    "test_canisters/canister_upgraded/src/canister_upgraded_backend",
]
resolver = "2"


[workspace.dependencies]
# later versions break candid-extract
candid = "0.10.20"
ic-cdk = "0.20.0"
ic-stable-structures = "0.7"
stable-fs = "0.13.0"
#stable-fs = {version = "0.13.0", path = "../stable-fs/stable-fs"}
anyhow = "1.0.102"
rand = "0.10.1"
pocket-ic = "13.0.0"
ic-wasi-polyfill = { path = "ic-wasi-polyfill" }

serde_bytes = "0.11.17"

cargo_metadata = "0.23.1"
ic-test = "0.4.0"
serde = "1.0.219"
tokio = { version = "1.52", features = ["full"] }
convert_case = "0.11.0"