[package]
name = "ic-wasi-polyfill"
version = "0.8.3"
edition = "2021"
keywords = ["ic", "wasi", "wasi-polyfill"]
description = "The project provides polyfill implementation of *wasi_snapshot_preview1* functions using IC System API."
license = "MIT"
repository = "https://github.com/wasm-forge/ic-wasi-polyfill"

[dependencies]
stable-fs.workspace = true
ic-stable-structures.workspace = true
ic-cdk.workspace = true
anyhow.workspace = true



rand = "0.9.1"
function_name = "0.3.0"

[features]
transient=[]
report_wasi_calls=[]
skip_unimplemented_functions=[]

[lib]
crate-type = ["staticlib","lib"]

[dev-dependencies]
candid = "0.10.14"
pocket-ic = "9.0.2"

