[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
candid.workspace = true
pocket-ic.workspace = true
serde.workspace = true
serde_bytes.workspace = true
cargo_metadata.workspace = true
ic-cdk.workspace = true
tokio.workspace = true
convert_case.workspace = true
ic-test.workspace = true
