[package]
name = "canister_initial_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-stable-structures.workspace = true
ic-cdk.workspace = true
anyhow.workspace = true

# take an older version of ic-wasi-polyfill
ic-wasi-polyfill = "0.9.0"
#ic-wasi-polyfill.workspace = true
