[package]
name = "canister_upgraded_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-stable-structures.workspace = true
ic-cdk.workspace = true
anyhow.workspace = true

ic-wasi-polyfill.workspace = true
