[package]
name = "fs_tests_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "fs_test"
path = "src/main.rs"

[dependencies]
candid.workspace = true
ic-stable-structures.workspace = true
ic-cdk.workspace = true
anyhow.workspace = true

ic-wasi-polyfill = {workspace = true, features=["report_wasi_calls"]}

sha2 = "0.10"

