[package]
name = "benchmark_test_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-stable-structures = "0.6.5"
stable-fs = {version = "0.5.1", path="../../../../../../stable-fs"}
ic-wasi-polyfill = {path="../../../../../../ic-wasi-polyfill"}
