[package]
name = "canister_upgraded_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.7"
ic-wasi-polyfill = {path="../../../../../ic-wasi-polyfill"}
