[package]
name = "fs_tests_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "fs_test"
path = "src/main.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.7"

ic-wasi-polyfill = {path="../../../../../../ic-wasi-polyfill"}
#ic-wasi-polyfill = "0.5"

sha2 = "0.10"
anyhow = "1.0.98"

